Update TestGeneFactory to use Java 11+ methods